syntax = "proto3";

package services.settings;

import "buf/validate/validate.proto";
import "codegen/itemslen/itemslen.proto";
import "codegen/perms/perms.proto";
import "resources/audit/audit.proto";
import "resources/common/database/database.proto";
import "resources/discord/discord.proto";
import "resources/file/filestore.proto";
import "resources/jobs/job_props.proto";
import "resources/permissions/attributes.proto";
import "resources/permissions/permissions.proto";
import "resources/settings/perms.proto";
import "resources/timestamp/timestamp.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/services/settings;settings";

message GetJobPropsRequest {}

message GetJobPropsResponse {
  resources.jobs.JobProps job_props = 1;
}

message SetJobPropsRequest {
  resources.jobs.JobProps job_props = 1;
}

message SetJobPropsResponse {
  resources.jobs.JobProps job_props = 1;
}

message GetRolesRequest {
  optional bool lowest_rank = 1;
}

message GetRolesResponse {
  repeated resources.permissions.Role roles = 1;
}

message GetRoleRequest {
  int64 id = 1;
}

message GetRoleResponse {
  resources.permissions.Role role = 1;
}

message CreateRoleRequest {
  string job = 1 [(buf.validate.field).string.max_len = 20];
  int32 grade = 2 [(buf.validate.field).int32.gte = 0];
}

message CreateRoleResponse {
  resources.permissions.Role role = 1;
}

message DeleteRoleRequest {
  int64 id = 1;
}

message DeleteRoleResponse {}

message UpdateRolePermsRequest {
  int64 id = 1;
  optional resources.settings.PermsUpdate perms = 2;
  optional resources.settings.AttrsUpdate attrs = 3;
}

message UpdateRolePermsResponse {}

message GetPermissionsRequest {
  int64 role_id = 1;
}

message GetPermissionsResponse {
  repeated resources.permissions.Permission permissions = 1;
  repeated resources.permissions.RoleAttribute attributes = 2;
}

message GetEffectivePermissionsRequest {
  int64 role_id = 1;
}

message GetEffectivePermissionsResponse {
  resources.permissions.Role role = 1;
  repeated resources.permissions.Permission permissions = 2;
  repeated resources.permissions.RoleAttribute attributes = 3;
}

message ViewAuditLogRequest {
  resources.common.database.PaginationRequest pagination = 1 [(buf.validate.field).required = true];
  optional resources.common.database.Sort sort = 2;
  // Search params
  repeated int32 user_ids = 3;
  optional resources.timestamp.Timestamp from = 4;
  optional resources.timestamp.Timestamp to = 5;
  // @sanitize: method=StripTags
  repeated string services = 6 [(buf.validate.field).repeated = {
    max_items: 10
    items: {
      string: {max_len: 64}
    }
  }];
  // @sanitize: method=StripTags
  repeated string methods = 7 [(buf.validate.field).repeated = {
    max_items: 10
    items: {
      string: {max_len: 64}
    }
  }];
  optional string search = 8 [(buf.validate.field).string.max_len = 64];
  repeated resources.audit.EventType states = 9 [(buf.validate.field).repeated = {
    max_items: 10
    items: {
      enum: {defined_only: true}
    }
  }];
}

message ViewAuditLogResponse {
  resources.common.database.PaginationResponse pagination = 1 [(buf.validate.field).required = true];
  repeated resources.audit.AuditEntry logs = 2 [(codegen.itemslen.items_len) = true];
}

message ListDiscordChannelsRequest {}

message ListDiscordChannelsResponse {
  repeated resources.discord.Channel channels = 1;
}

message ListUserGuildsRequest {}

message ListUserGuildsResponse {
  repeated resources.discord.Guild guilds = 1;
}

message DeleteJobLogoRequest {}

message DeleteJobLogoResponse {}

service SettingsService {
  rpc GetJobProps(GetJobPropsRequest) returns (GetJobPropsResponse) {
    option (codegen.perms.perms) = {enabled: true};
  }
  rpc SetJobProps(SetJobPropsRequest) returns (SetJobPropsResponse) {
    option (codegen.perms.perms) = {enabled: true};
  }

  rpc GetRoles(GetRolesRequest) returns (GetRolesResponse) {
    option (codegen.perms.perms) = {enabled: true};
  }
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "GetRoles"
    };
  }
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse) {
    option (codegen.perms.perms) = {enabled: true};
  }
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse) {
    option (codegen.perms.perms) = {enabled: true};
  }

  rpc UpdateRolePerms(UpdateRolePermsRequest) returns (UpdateRolePermsResponse) {
    option (codegen.perms.perms) = {enabled: true};
  }

  rpc GetPermissions(GetPermissionsRequest) returns (GetPermissionsResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "GetRoles"
    };
  }
  rpc GetEffectivePermissions(GetEffectivePermissionsRequest) returns (GetEffectivePermissionsResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "GetRoles"
    };
  }

  rpc ViewAuditLog(ViewAuditLogRequest) returns (ViewAuditLogResponse) {
    option (codegen.perms.perms) = {enabled: true};
  }

  rpc ListDiscordChannels(ListDiscordChannelsRequest) returns (ListDiscordChannelsResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "SetJobProps"
    };
  }
  rpc ListUserGuilds(ListUserGuildsRequest) returns (ListUserGuildsResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "SetJobProps"
    };
  }

  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_REQUEST_STANDARD_NAME
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc UploadJobLogo(stream resources.file.UploadFileRequest) returns (resources.file.UploadFileResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "SetJobProps"
    };
  }
  rpc DeleteJobLogo(DeleteJobLogoRequest) returns (DeleteJobLogoResponse) {
    option (codegen.perms.perms) = {
      enabled: true
      name: "SetJobProps"
    };
  }
}
